# wgpu-playground

./: .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  flake.nix  maskfile.md
.claude/: settings.local.json
gol/: Cargo.toml  index.html
gol/.cargo/: config.toml
gol/src/: app.rs  conway.rs  conway.wgsl  display.wgsl  gpu.rs  lib.rs  main.rs  renderer.rs
hello-wgpu/: Cargo.toml  index.html
hello-wgpu/src/: app.rs  camera.rs  camera_controller.rs  instance.rs  lib.rs  light.rs  light.wgsl  main.rs  model.rs  resources.rs  shader.wgsl  state.rs  texture.rs  vertex.rs
