[workspace]
members = [
    "hello-wgpu",
]
resolver = "3"

[profile.release]
strip = true

[workspace.dependencies]
anyhow = "1.0"
bytemuck = "1.23.1"
cgmath = "0.18.0"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
env_logger = "0.11"
image = { version = "0.25.6", default-features = false }
log = "0.4"
pollster = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = "0.3"
wgpu = "25.0"
winit = "0.30"
