[workspace]
members = [
    "hello-wgpu",
    "gol",
]
resolver = "3"

[profile.release]
strip = true

[workspace.dependencies]
anyhow = "1.0"
bytemuck = "1.23.1"
cgmath = "0.18.0"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
env_logger = "0.11"
fs_extra = "1.3.0"
image = { version = "0.25.6", default-features = false }
glob = "0.3.2"
log = "0.4"
pollster = "0.3"
reqwest = "0.12.22"
tobj = { version = "4.0.3", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = "0.3"
wgpu = "25.0"
winit = "0.30"
