[package]
name = "gol"
version = "0.1.0"
edition = "2024"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gol"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true, features = [ "derive" ] }
cgmath = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
pollster = { workspace = true }
rand = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-bindgen = { workspace = true }
getrandom = { workspace = true, features = ["wasm_js"] }
web-sys = { workspace = true, features = [
    "Document",
    "Window",
    "Element",
    "Location",
] }
wgpu = { workspace = true }
