[package]
name = "hello-wgpu"
version = "0.1.0"
edition = "2024"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "hello-wgpu"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true, features = [ "derive" ] }
cgmath = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
pollster = { workspace = true }
tobj = { workspace = true, features = ["async"] }
wgpu = { workspace = true }
winit = { workspace = true }

[dependencies.image]
workspace = true
features = ["png", "jpeg"]

[build-dependencies]
anyhow = { workspace = true }
fs_extra = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
reqwest = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
    "Document",
    "Window",
    "Element",
    "Location",
] }
wgpu = { workspace = true, features = ["webgl"] }
